RESOLVED FIXED40267
[GTK] Mouse movement should not trigger a replay of saved events in the event sender
https://bugs.webkit.org/show_bug.cgi?id=40267
Summary [GTK] Mouse movement should not trigger a replay of saved events in the event...
Martin Robinson
Reported 2010-06-07 14:28:34 PDT
To match the behavior of other platforms, a mouse movement while a mouse button is down should not trigger a replay of the event queue. Instead, the events should be played back after the test releases the mouse button. I noticed this while enabling slider tests.
Attachments
Patch for this issue (2.54 KB, patch)
2010-06-07 15:01 PDT, Martin Robinson
no flags
Martin Robinson
Comment 1 2010-06-07 15:01:10 PDT
Created attachment 58090 [details] Patch for this issue
Martin Robinson
Comment 2 2010-06-07 15:13:09 PDT
Comment on attachment 58090 [details] Patch for this issue Clearing flags on attachment: 58090 Committed r60803: <http://trac.webkit.org/changeset/60803>
Martin Robinson
Comment 3 2010-06-07 15:13:14 PDT
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 4 2010-06-07 15:36:27 PDT
http://trac.webkit.org/changeset/60803 might have broken GTK Linux 64-bit Debug
Note You need to log in before you can comment on or make changes to this bug.